--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "dev:check": "astro check --watch & astro dev",
+    "prebuild": "tsx scripts/cacheAvatars.ts",
     "build": "astro-pure check && astro check && astro build",
     "preview": "astro preview",
     "sync": "astro sync",
@@ -15,7 +16,8 @@
     "format": "prettier --write  '**/*.{js,jsx,ts,tsx,md,mdx,astro}'",
     "lint": "eslint --fix 'src/**/*.{js,ts,jsx,tsx,astro}'",
     "yijiansilian": "bun lint && bun sync && bun check && bun format",
-    "clean": "rm -rf .astro .vercel dist"
+    "clean": "rm -rf .astro .vercel dist",
+    "cache:avatars": "tsx scripts/cacheAvatars.ts"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
