--- a/package.json
+++ b/package.json
@@ -34,13 +34,12 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "eslint": "^9.31.0",
     "eslint-plugin-astro": "^1.3.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1",
     "rollup-plugin-visualizer": "^6.0.3",
-    "typescript-eslint": "^8.37.0"
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
