--- a/packages/pure/package.json
+++ b/packages/pure/package.json
@@ -1,8 +1,9 @@
 {
   "name": "astro-pure",
-  "version": "1.3.6",
-  "description": "A simple, clean but powerful blog theme build by astro.",
   "type": "module",
+  "description": "A simple, clean but powerful blog theme build by astro.",
+  "version": "1.3.6",
+  "homepage": "https://astro-pure.js.org/",
   "author": "CWorld",
   "license": "Apache-2.0",
   "repository": {
@@ -11,11 +12,12 @@
     "directory": "packages/pure"
   },
   "bugs": "https://github.com/cworld1/astro-theme-pure",
-  "homepage": "https://astro-pure.js.org/",
   "keywords": [
-    "Astro",
-    "Theme",
-    "Blog"
+    "astro-component",
+    "withastro",
+    "css",
+    "ui",
+    "renderer"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
