--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
+    "@astrojs/node": "^9.5.1",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/vercel": "^9.0.2",
+    "@astrojs/vue": "^5.1.3",
     "@waline/client": "^3.8.0",
     "astro": "^5.16.3",
     "astro-pure": "1.3.9",
