--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@waline/client": "^3.8.0",
     "astro": "^5.16.3",
     "astro-pure": "1.3.9",
+    "axios": "^1.13.2",
+    "hejunjie-encrypted-request": "^2.0.0",
     "katex": "^0.16.25",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
